{{$NEXT}}

0.09996   2014-11-04 10:54:11-08:00 America/Los_Angeles

      [MISCELLANEOUS]

      - Upgraded to latest version of Module::CoreList, so we can support
      latest versions of perl.

      - Tests will no longer clobber ~/.cpanm (GH #170). Thanks to Karen
      Etheridge for pointing this out.

0.09995   2014-08-19 18:27:23 America/Los_Angeles

      [SECURITY]

      - Fixed critical security hole in Pinto::Server. If you are using pintod,
      please upgrade now! Thanks to Aran Deltac for reporting this.

      [ENHANCEMENTS]

      - Improved error handling in Pinto::Remote so you get pretty colored
      errors instead of big ugly stack traces, just like you do when using
      a local repository.

      [MISCELLANEOUS]

      - Demoted some warnings to notifications, for less noisy output.
      Use the --verbose option to see more diagnostic output.

0.09993   2014-05-02 17:43:41 America/Los_Angeles

      [INCOMPATILBE CHANGES]

      - The protocol used to communicate with a remote Pinto repository is now
      versioned with media types via the "Accept" header.  So if you upgrade
      to this version of pinto, you'll also need to upgrade pintod to this same
      version.  Going forward, the protocol will be versioned so that we
      can potentially support different versions of the client and server at
      the same time.  But for the time being, you'll get an exception telling
      you whether to upgrade your client (pinto) or the server (pintod).

      - The PINTO_COLORS and PINTO_COLOURS environment variables are deprecated
      in favor of PINTO_PALETTE.  You can still use the old names for now, but
      they will be removed in a future release.

      - When using the --all option with the "list" command, the default format
      shows the pin status as "?" (i.e. indeterminable) instead of showing the
      main module status.

      [BUG FIXES]

      - Colorization is now disabled by default when the output is being piped or